<resources>
    <string name="app_name">AndRubik</string>
    <string name="title_scrambler">Scrambler</string>
    <string name="title_timer">Timer</string>
    <string name="title_settings">Settings</string>

    <!-- Settings / sync -->
    <string name="settings_enable_sync">Enable sync</string>
    <string name="settings_sync_summary">Upload each solve (scramble + time) to your server. Results are kept locally and retried when the server is unreachable.</string>
    <string name="settings_server_url">Server URL</string>
    <string name="settings_username">Username</string>
    <string name="settings_password">Password</string>
    <string name="settings_save">Save</string>
    <string name="settings_saved">Settings saved</string>
    <string name="settings_pending">%1$d result(s) pending sync</string>

    <string name="home_subtitle">3x3 Rubik\'s Cube</string>
    <string name="open_scrambler">Scrambler</string>
    <string name="open_timer">Timer</string>

    <!-- Timer states -->
    <string name="timer_idle">Touch and hold</string>
    <string name="timer_ready">Release to start</string>
    <string name="timer_tap_to_stop">Tap to stop</string>
    <string name="timer_initial">0.00</string>
    <string name="timer_reset">Reset timer</string>
    <string name="timer_dismiss">Dismiss without recording</string>
    <string name="timer_dismiss_title">Dismiss this solve?</string>
    <string name="timer_dismiss_message">Are you sure you want to dismiss that record? The time will be discarded and not synced.</string>
    <string name="timer_dismiss_confirm">Dismiss</string>
    <string name="timer_dismiss_keep">Keep</string>
</resources>
